// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchingForDeviceStep matches snapshot for Android < 12 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
    }
  }
  testID="searching-for-device-step"
>
  <Image
    resizeMode="contain"
    source={1}
    style={
      {
        "height": 54,
        "overflow": "visible",
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginHorizontal": "auto",
        "marginTop": 30,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Bold",
          "fontSize": 22,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Looking for device
    </Text>
    <View
      style={
        {
          "marginLeft": 20,
        }
      }
    >
      <ActivityIndicator />
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 30,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Please make sure your Ledger device is:
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      1. Unlock your Ledger device
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      2. Install and open the Ethereum app
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      3. Enable Bluetooth
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      4. Location is enabled with use precise location on
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      5. Do not disturb must be turned off
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      6. Enable "blind signing" on your Ledger device.
    </Text>
  </View>
  <TouchableOpacity
    onPress={[Function]}
  >
    <Text
      accessibilityRole="text"
      numberOfLines={2}
      style={
        {
          "color": "#4459ff",
          "flex": 1,
          "flexWrap": "wrap",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginLeft": 20,
          "marginRight": 20,
          "marginTop": 40,
        }
      }
    >
      How to install the Ethereum app on a Ledger device
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`SearchingForDeviceStep matches snapshot for Android 12+ 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
    }
  }
  testID="searching-for-device-step"
>
  <Image
    resizeMode="contain"
    source={1}
    style={
      {
        "height": 54,
        "overflow": "visible",
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginHorizontal": "auto",
        "marginTop": 30,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Bold",
          "fontSize": 22,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Looking for device
    </Text>
    <View
      style={
        {
          "marginLeft": 20,
        }
      }
    >
      <ActivityIndicator />
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 30,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Please make sure your Ledger device is:
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      1. Unlock your Ledger device
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      2. Install and open the Ethereum app
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      3. Enable Bluetooth
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      4. Nearby devices is enabled
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      5. Do not disturb must be turned off
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingLeft": 7,
        }
      }
    >
      6. Enable "blind signing" on your Ledger device.
    </Text>
  </View>
  <TouchableOpacity
    onPress={[Function]}
  >
    <Text
      accessibilityRole="text"
      numberOfLines={2}
      style={
        {
          "color": "#4459ff",
          "flex": 1,
          "flexWrap": "wrap",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginLeft": 20,
          "marginRight": 20,
          "marginTop": 40,
        }
      }
    >
      How to install the Ethereum app on a Ledger device
    </Text>
  </TouchableOpacity>
</View>
`;
